--- a/Destapa-Cañerias/Como-hacer-destapa-cañerias-liquido.html
+++ b/Destapa-Cañerias/Como-hacer-destapa-cañerias-liquido.html
@@ -37,9 +37,7 @@ body {
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-       <a class="navbar-brand" href="https://craigserivces.github.io/cloacas12/"><!--Site Name-->
-Destapaciones De Cloacas
-<!--endSite Name--></a>
+       <a class="navbar-brand" href="https://craigserivces.github.io/cloacas12/"><!--Site Name-->Destapaciones De Cloacas<!--endSite Name--></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -140,27 +138,27 @@ Como hacer destapa cañerias liquido - Como destapar un wc con soda caustica
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-burzaco.html">Destapa cañerias zona sur burzaco </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquinas-Cloacas.html">Destapaciones Con Maquinas Cloacas </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-lanus.html">Destapa cañerias zona sur lanus </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-manual-walmart.html">Destapacaños manual walmart </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapacaños-truper-para-taladro.html">Destapacaños truper para taladro </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Inodoros.html">Destapaciones De Inodoros </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
+       <a href="../Destapa-Cañerias/Harpic-destapacaños-como-se-usa.html">Harpic destapacaños como se usa </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapador-de-cañerias-sodimac.html">Destapador de cañerias sodimac </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-liquido-para-inodoro.html">Destapacaños liquido para inodoro </a> 
          </li>
 <!--EndPostsList-->
 
@@ -198,6 +196,10 @@ Como hacer destapa cañerias liquido - Como destapar un wc con soda caustica
                 
                   <ul class="list-unstyled mb-0" class="leftCat">
 <li>
+  <a href="../Servicios/index.html">Servicios</a>
+</li>
+
+<li>
   <a href="../Destapa-Cañerias/index.html">Destapa Cañerias</a>
 </li>
 
@@ -219,22 +221,37 @@ Como hacer destapa cañerias liquido - Como destapar un wc con soda caustica
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-baño-sin-bicarbonato.html">Como destapar un baño sin bicarbonato </a> 
+       <a href="../Destapa-Cañerias/Alcohol-boricado-para-que-sirve.html">Alcohol boricado para que sirve </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cañerias-plomero-liquido.html">Destapa cañerias plomero liquido </a> 
+       <a href="../Destapa-Cañerias/Merclin-destapa-cañerias-concentrado.html">Merclin destapa cañerias concentrado </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapador-de-cañerias-sodimac.html">Destapador de cañerias sodimac </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-mas-potente.html">Destapacaños mas potente </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapación-De-Cañerías.html">Destapación De Cañerías </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-miramar.html">Destapaciones de cloacas miramar </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-burzaco.html">Destapa cañerias zona sur burzaco </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Limpieza-De-Cañerias.html">Limpieza De Cañerias </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cañeria.html">Destapaciones De Cañeria </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -244,17 +261,7 @@ Como hacer destapa cañerias liquido - Como destapar un wc con soda caustica
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-lanus.html">Destapa cañerias zona sur lanus </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-En.html">Destapaciones En </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Harpic-destapacaños-como-se-usa.html">Harpic destapacaños como se usa </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-junin.html">Destapaciones de cloacas junin </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -264,12 +271,7 @@ Como hacer destapa cañerias liquido - Como destapar un wc con soda caustica
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-pretul-precio.html">Destapacaños pretul precio </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-pretul-como-se-usa.html">Destapacaños pretul como se usa </a> 
+       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-berazategui.html">Destapa cañerias zona sur berazategui </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
@@ -296,9 +298,7 @@ Como hacer destapa cañerias liquido - Como destapar un wc con soda caustica
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white"><!--Footer-->
-Destapaciones De Cloacas
-<!--endFooter--></p>
+        <p class="m-0 text-center text-white"><!--Footer-->Destapaciones De Cloacas<!--endFooter--></p>
       </div>
       <!-- /.container -->
     </footer>
